[gd_scene load_steps=2 format=3 uid="uid://d2dv3lkwlwxjs"]

[ext_resource type="Script" path="res://src/workstation/node/suspenso/Folder_setting.gd" id="1_23d5k"]

[node name="FolderSetting" type="Window"]
title = "Pasta"
position = Vector2i(474, 115)
size = Vector2i(400, 400)
script = ExtResource("1_23d5k")

[node name="root" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="style" type="PanelContainer" parent="root"]
layout_mode = 2
size_flags_vertical = 3

[node name="element" type="VBoxContainer" parent="root/style"]
layout_mode = 2

[node name="delete" type="HBoxContainer" parent="root/style/element"]
layout_mode = 2

[node name="lbl_delete" type="Label" parent="root/style/element/delete"]
layout_mode = 2
size_flags_horizontal = 3
text = "Deletar pasta: "

[node name="btn_deletar" type="Button" parent="root/style/element/delete"]
layout_mode = 2
text = "Deletar"

[node name="script" type="VBoxContainer" parent="root/style/element"]
layout_mode = 2
size_flags_vertical = 3

[node name="lbl_criar" type="Label" parent="root/style/element/script"]
layout_mode = 2
size_flags_horizontal = 3
text = "Criar Script"
horizontal_alignment = 1

[node name="script_name" type="LineEdit" parent="root/style/element/script"]
layout_mode = 2
placeholder_text = "Nome do Script"

[node name="opções" type="OptionButton" parent="root/style/element/script"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Pseudocódigo"
popup/item_0/id = 0
popup/item_1/text = "Escrita"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Python"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Java"
popup/item_3/id = 3
popup/item_3/disabled = true

[node name="create" type="Button" parent="root/style/element/script"]
layout_mode = 2
size_flags_vertical = 10
text = "Criar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="root/style/element/delete/btn_deletar" to="." method="_on_btn_deletar_pressed"]
[connection signal="item_selected" from="root/style/element/script/opções" to="." method="_on_opções_item_selected"]
[connection signal="pressed" from="root/style/element/script/create" to="." method="_on_create_pressed"]
